<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RadNotepad</string>
    <string name="open_prompt">Open</string>
    <string name="save_as_prompt">Save As</string>
    <string name="send_prompt">Send To</string>
    <string name="action_open">Open...</string>
    <string name="action_revert">Revert to saved</string>
    <string name="action_save">Save</string>
    <string name="action_save_as">Save as...</string>
    <string name="action_details">Details...</string>
    <string name="action_share">Share file...</string>
    <string name="selection_share">Share text...</string>
    <string name="action_open_with">Open with...</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_wrap">Word wrap</string>
    <string name="action_le_windows">Windows (CRLF)</string>
    <string name="action_le_unix">Unix (LF)</string>
    <string name="action_le_mac">Macintosh (CR)</string>
    <string name="status_le_windows_short">CRLF</string>
    <string name="status_le_unix_short">LF</string>
    <string name="status_le_mac_short">CR</string>
    <string name="action_line_ending">Line ending...</string>
    <string name="action_scheme">Scheme...</string>
    <string name="action_scheme_none">None</string>
    <string name="action_settings">Settings...</string>
    <string name="selection_change_case">Change case</string>
    <string name="not_found">\'%s\' not found</string>
    <string name="invalid_file">Invalid file</string>
    <string name="no_activity_found">No activity found</string>
    <string name="error_loading_font_file">Error loading font file</string>
</resources>
