<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@android:string/search_go"
        android:alphabeticShortcut="f"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="au.radsoft.widget.TextSearchView" />
    <item android:id="@+id/action_undo"
        android:icon="@drawable/ic_action_undo"
        android:title="@string/action_undo"
        android:alphabeticShortcut="z"
        android:showAsAction="always" />
    <item android:id="@+id/action_redo"
        android:icon="@drawable/ic_action_redo"
        android:title="@string/action_redo"
        android:alphabeticShortcut="y"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_open_content"
        android:title="@string/action_open"
        android:alphabeticShortcut="o" />
    <item android:id="@+id/action_revert"
        android:title="@string/action_revert" />
    <item android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_save"
        android:alphabeticShortcut="s"
        android:showAsAction="always" />
    <item android:id="@+id/action_save_as"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_save_as" />
    <item android:id="@+id/action_details"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_details" />
    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider" />
    <item android:id="@+id/action_open_with"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/action_open_with"/>
    <item
        android:title="@string/action_line_ending" >
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_le_windows"
                    android:title="@string/action_le_windows" />
                <item android:id="@+id/action_le_unix"
                    android:title="@string/action_le_unix" />
                <item android:id="@+id/action_le_mac"
                    android:title="@string/action_le_mac" />
            </group>
        </menu>
    </item>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100" />
</menu>
